--- a/core/pom.xml
+++ b/core/pom.xml
@@ -14,6 +14,11 @@
 	<description>A multidimensional, type-agnostic image processing library.</description>
 
 	<dependencies>
+		<dependency>
+			<groupId>net.imglib2</groupId>
+			<artifactId>neon</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
 		<!-- Test scope dependencies -->
 		<dependency>
 			<groupId>gov.nist.math</groupId>
